--- a/about/index.html
+++ b/about/index.html
@@ -29,14 +29,53 @@
           <div class="header-divider"></div>
           <nav>
                <ul>
-                   <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-                   <li><a href="about/index.html" target="_blank">About</a></li>
+                   <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+                   <li><a href="index.html" target="_blank">About</a></li>
                </ul>
           </nav>
       </div>
   </header>
 
   <main>
+
+<!-- Mission Section -->
+    <section class="mission">
+        <div class="content-wrapper">
+          <div class="mission-content">
+            <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div> <!-- mission content wrapper ends -->
+    </section> <!-- contact-info -->
+
+<!-- Map -->
+    <section class="map">
+        <figure></figure>
+    </section>
+
+<!-- Ccontact Section -->
+    <section class="contact-section">
+        <div class="content-wrapper">
+            <h2>Contact us, because you all need this</h2>
+            <div>
+                <h4>General Information</h4>
+                <address>
+                  <p>333 Main St, Lake Geneva, WI 53147</p>
+                  <p>555-555-5555</p>
+                  <p>hello@unplugged.com</p>
+                </address>
+            </div>
+            <div>
+                <h4>Chat with a Facilitator</h4>
+                <address>
+                  <p>555-555-5556</p>
+                  <p>facilitator@unplugged.com</p>
+                </address>
+            </div>
+        </div>
+    </section>
+
   </main>
 
   <footer>
