coded html of faq page

--- a/faq/index.html
+++ b/faq/index.html
@@ -37,6 +37,36 @@
   </header>
 
   <main>
+
+    <section class="faq-section">
+        <div class="content-wrapper">
+          <div class="faq-content">
+            <h2>Frequently Asked Questions</h2>
+            <div>
+              <p>How do I get to the Unplugged retreat?</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+
+            <div>
+              <p>What kind of team is right for the Unplugged retreat?</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+
+            <div>
+              <p>What size teams can you accommodate?</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+
+            <div>
+              <p>Is there really no wifi available?</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+
+          </div>
+        </div> <!-- mission content wrapper ends -->
+    </section> <!-- contact-info -->
+
+
   </main>
 
   <footer>
