added faq class

--- a/faq/index.html
+++ b/faq/index.html
@@ -38,7 +38,7 @@
 
   <main>
 
-    <section class="faq-section">
+    <section class="faq">
         <div class="content-wrapper">
           <div class="faq-content">
             <h2>Frequently Asked Questions</h2>
