added aside content wrapper

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
   </section> <!-- hero area section ends -->
 
 <!-- Sign up form -->
-  <aside class="content-wrapper">
+  <aside>
+  <div class="content-wrapper">
     <div class="form-description">
       <h3>Want to join the next retreat?</h3>
       <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
@@ -56,6 +57,7 @@
       <input type="text" name="name" value="email address">
       <input type="button" value="Download Itinerary">
     </div>
+  </div>
   </aside>
 
 <!-- Features section -->
