--- a/about/index.html
+++ b/about/index.html
@@ -41,8 +41,8 @@
 <!-- Mission Section -->
     <section class="mission">
         <div class="content-wrapper">
-          <div class="mission-content">
             <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+          <div class="mission-content">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
@@ -58,6 +58,7 @@
     <section class="contact-section">
         <div class="content-wrapper">
             <h2>Contact us, because you all need this</h2>
+        <div class="contact-content">
             <div>
                 <h4>General Information</h4>
                 <address>
@@ -73,6 +74,7 @@
                   <p>facilitator@unplugged.com</p>
                 </address>
             </div>
+          </div>
         </div>
     </section>
 
