--- a/about/index.html
+++ b/about/index.html
@@ -13,6 +13,8 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+<!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -57,7 +59,7 @@
 <!-- Ccontact Section -->
     <section class="contact-section">
         <div class="content-wrapper">
-            <h2>Contact us, because you all need this</h2>
+            <h2>Contact us, because you all need this.</h2>
         <div class="contact-content">
             <div>
                 <h4>General Information</h4>
@@ -84,12 +86,12 @@
     <div class="content-wrapper">
       <div class="footer-content">
         <address class="contact">
-          <h3>Contact</h3>
+          <h4>Contact</h4>
           <p>555-555-5555</p>
           <p>hello@unplugged.com</p>
         </address>
           <div class="social">
-              <h3>Social</h3>
+              <h4>Social</h4>
               <div class="social-icons">
                   <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
                   <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
