--- a/faq/index.html
+++ b/faq/index.html
@@ -13,6 +13,8 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+<!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -73,12 +75,12 @@
     <div class="content-wrapper">
       <div class="footer-content">
         <address class="contact">
-          <h3>Contact</h3>
+          <h4>Contact</h4>
           <p>555-555-5555</p>
           <p>hello@unplugged.com</p>
         </address>
           <div class="social">
-              <h3>Social</h3>
+              <h4>Social</h4>
               <div class="social-icons">
                   <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
                   <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
