--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+<!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -49,11 +51,11 @@
   <aside>
   <div class="content-wrapper">
     <div class="form-description">
-      <h3>Want to join the next retreat?</h3>
+      <h4>Want to join the next retreat?</h4>
       <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
     </div>
     <div class="form">
-      <h3>Find out more</h3>
+      <h4>Find out more</h4>
       <input type="text" name="name" value="email address">
       <input type="button" value="Download Itinerary">
     </div>
@@ -63,7 +65,7 @@
 <!-- Features section -->
   <section class="features">
     <div class="content-wrapper">
-      <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+      <h3>Have the work week you always dreamed of - without the bad wifi.</h3>
 
     <div class="features-items">
       <article>
@@ -103,11 +105,11 @@
 <!-- Reviews section -->
   <section class="reviews">
     <div class="content-wrapper">
-      <h2>Be a better team in 5 days, like this one.</h2>
+      <h3>Be a better team in 5 days, like this one.</h3>
     <article>
       <img src="#" id="reviews-img" alt="LaCrue Team">
       <div id="reviews-text">
-        <h3>LaCrue Bottling Co. October 2018</h3>
+        <h4>LaCrue Bottling Co. October 2018</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
     </article>
@@ -120,12 +122,12 @@
   <div class="content-wrapper">
     <div class="footer-content">
       <address class="contact">
-        <h3>Contact</h3>
+        <h4>Contact</h4>
         <p>555-555-5555</p>
         <p>hello@unplugged.com</p>
       </address>
         <div class="social">
-            <h3>Social</h3>
+            <h4>Social</h4>
             <div class="social-icons">
                 <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
                 <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
