--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     <div class="form">
       <h4>Find out more</h4>
-      <input type="text" name="name" value="email address">
+      <input type="text" name="name" value="name@email.com">
       <input type="button" value="Download Itinerary">
     </div>
   </div>
