--- a/faq/index.html
+++ b/faq/index.html
@@ -27,7 +27,11 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-          <a href="index.html"><img src="" alt="unplugged logo"></a>
+      <figure>
+      <a href="../index.html">
+           <img src="../img/unplugged-logo.png" alt="Unplugged Logo">
+      </a>
+    </figure>
           <div class="header-divider"></div>
           <nav>
                <ul>
