--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
   <!-- Add your site or application content here -->
 <header>
   <div class="content-wrapper">
-        <a href="index.html"><img src="" alt="unplugged logo"></a>
+    <figure>
+    <a href="index.html">
+         <img src="img/unplugged-logo.png" alt="Unplugged Logo">
+    </a>
+  </figure>
         <div class="header-divider"></div>
         <nav>
              <ul>
@@ -105,9 +109,11 @@
 <!-- Reviews section -->
   <section class="reviews">
     <div class="content-wrapper">
-      <h3>Be a better team in 5 days, like this one.</h3>
+      <h3>Be a better team in 5 days, like these.</h3>
     <article>
-      <img src="#" id="reviews-img" alt="LaCrue Team">
+      <figure>
+        <img src="img/unplugged-reviews-img.jpg" id="reviews-img" alt="LaCrue Team" />
+      </figure>
       <div id="reviews-text">
         <h4>LaCrue Bottling Co. October 2018</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
