added and styled features icons

--- a/about/index.html
+++ b/about/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="../css/main.css">
 <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+<!--Font Awesome CDN Version 5.11.2-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
 
   <meta name="theme-color" content="#fafafa">
 </head>
