fixed final touches issues

--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,7 @@
         <div class="content-wrapper">
             <h2>Contact us, because you all need this.</h2>
         <div class="contact-content">
-            <div>
+            <div id="general-info">
                 <h4>General Information</h4>
                 <address>
                   <p>333 Main St, Lake Geneva, WI 53147</p>
