--- a/faq/index.html
+++ b/faq/index.html
@@ -51,22 +51,22 @@
         <div class="content-wrapper">
           <div class="faq-content">
             <div>
-              <p>How do I get to the Unplugged retreat?</p>
+              <p><strong>How do I get to the Unplugged retreat?</strong></p>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
 
             <div>
-              <p>What kind of team is right for the Unplugged retreat?</p>
+              <p><strong>What kind of team is right for the Unplugged retreat?</strong></p>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
 
             <div>
-              <p>What size teams can you accommodate?</p>
+              <p><strong>What size teams can you accommodate?</strong></p>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
 
             <div>
-              <p>Is there really no wifi available?</p>
+              <p><strong>Is there really no wifi available?</strong></p>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
 
